# Edwardo

./: .gitignore
agent/src/: .env.template  README.md  pyproject.toml
agent/src/coordinator/: __init__.py  agent.py  config.py  mcp_toolsets.py  prompt.py  workflows.py
agent/src/coordinator/sub_agents/: __init__.py
agent/src/coordinator/sub_agents/context_agent/: __init__.py  agent.py  prompt.py
agent/src/coordinator/sub_agents/decision_agent/: __init__.py  agent.py  prompt.py
agent/src/coordinator/sub_agents/execution_agent/: __init__.py  agent.py  prompt.py
agent/src/coordinator/sub_agents/planning_agent/: __init__.py  agent.py  prompt.py
agent/src/coordinator/tools/: tools.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Footer.tsx  Navbar.tsx
frontend/src/modules/client/: main.tsx
frontend/src/modules/landing/: main.tsx
frontend/src/modules/landing/Pages/: Login.tsx  Register.tsx
frontend/src/routes/: index.tsx  protectedRoute.tsx  redirectRoute.tsx
frontend/src/store/: index.ts
frontend/src/store/apis/: authApi.ts
frontend/src/store/slices/: authSlice.ts
